# foundry

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  pyproject.toml  setup.py
csrc/: BinaryGraphIO.cpp  CUDAGraph.cpp  CUDAGraphParallel.cpp  binding.cpp  hook.cpp
include/: BinaryGraphFormat.h  CUDAGraph.h  CUDAGraphInternal.h  hook.h  metadata.h
python/foundry/: __init__.py  allocation_region.py  graph.py  ops.pyi
tests/: test_async_load.py  test_deepep_fabric.py  test_load_cublas_ws.py  test_load_graph.py  test_nvjet_graph.py  test_preallocation.py  test_stop_resume.py  test_vmm_alloc.py
